@@ -3,7 +3,8 @@ package com.github.charlyb01.xpstorage_trinkets.mixin;
 import com.github.charlyb01.xpstorage.BookInfo;
 import com.github.charlyb01.xpstorage.Utils;
 import com.github.charlyb01.xpstorage.XpBook;
-import com.github.charlyb01.xpstorage.cardinal.MyComponents;
+import com.github.charlyb01.xpstorage.component.MyComponents;
+import com.github.charlyb01.xpstorage.component.XpAmountData;
 import com.github.charlyb01.xpstorage_trinkets.XpstorageTrinkets;
 import com.github.charlyb01.xpstorage_trinkets.config.ModConfig;
 import com.mojang.authlib.GameProfile;
@@ -17,6 +18,7 @@ import net.minecraft.util.Pair;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.World;
 import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
@@ -42,12 +44,13 @@ public abstract class ServerPlayerMixin extends PlayerEntity {
             int playerExperience = Math.round(Utils.getPlayerExperience(this) * transferPenalty);
 
             while (!xpBooks.isEmpty() && playerExperience > 0) {
-                ItemStack xpBook = xpBooks.get(0);
-                int bookExperience = MyComponents.XP_COMPONENT.get(xpBook).getAmount();
+                ItemStack xpBook = xpBooks.getFirst();
+                int bookExperience = xpBook.getOrDefault(MyComponents.XP_COMPONENT, XpAmountData.EMPTY).amount();
                 int bookMaxExperience = ((BookInfo) xpBook.getItem()).getMaxExperience();
+                int bookMaxLevel = ((BookInfo) xpBook.getItem()).getMaxLevel();
                 int bookRemainingExperience = bookMaxExperience - bookExperience;
                 if (bookRemainingExperience == 0) {
-                    xpBooks.remove(0);
+                    xpBooks.removeFirst();
                     continue;
                 }
 
@@ -59,9 +62,10 @@ public abstract class ServerPlayerMixin extends PlayerEntity {
                 if (bookRemainingExperience < playerExperience) {
                     this.addExperience(-bookRemainingExperience);
                     playerExperience -= bookRemainingExperience;
-                    MyComponents.XP_COMPONENT.get(xpBook).setAmount(bookMaxExperience);
+                    xpBook.set(MyComponents.XP_COMPONENT, new XpAmountData(bookMaxExperience, bookMaxLevel));
                 } else {
-                    MyComponents.XP_COMPONENT.get(xpBook).setAmount(bookExperience + playerExperience);
+                    int amount = bookExperience + playerExperience;
+                    xpBook.set(MyComponents.XP_COMPONENT, new XpAmountData(amount, Utils.getLevelFromExperience(amount)));
                     this.addExperience(-playerExperience);
                     playerExperience = 0;
                 }
@@ -73,15 +77,17 @@ public abstract class ServerPlayerMixin extends PlayerEntity {
         }
     }
 
+    @Unique
     private ItemStack getXPSaver() {
         if (TrinketsApi.getTrinketComponent(this).isEmpty()) return null;
 
         List<Pair<SlotReference, ItemStack>> slots = TrinketsApi.getTrinketComponent(this).get()
                 .getEquipped(XpstorageTrinkets.xp_saver);
 
-        return slots.isEmpty() ? null : slots.get(0).getRight();
+        return slots.isEmpty() ? null : slots.getFirst().getRight();
     }
 
+    @Unique
     private List<ItemStack> getXPBooks() {
         List<ItemStack> list = new ArrayList<>();
         for (ItemStack itemStack : this.getInventory().main) {
